force-app/main/default/objects/Resident__c/fields/Ejari_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Ejari_End_Date__c</fullName>
    <label>Ejari End Date</label>
    <type>Date</type>
</CustomField>