force-app/main/default/objects/Resident__c/fields/Request_Raised_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Raised_Date__c</fullName>
    <label>Request Raised Date</label>
    <type>Date</type>
</CustomField>