force-app/main/default/objects/Resident__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Residents</relationshipLabel>
    <relationshipName>Residents</relationshipName>
    <type>Lookup</type>
</CustomField>